<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grocery_list"
            android:icon="@drawable/ic_grocery"
            android:title="@string/nav_grocery_list" />
        
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_recipe"
            android:title="@string/nav_recipes" />
        
        <item
            android:id="@+id/nav_send_list"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_send_list" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
